🎨 Fix Sign message page to be vertically middle-aligned

--- a/src/components/toolbox/pageLayout/pageLayout.css
+++ b/src/components/toolbox/pageLayout/pageLayout.css
@@ -4,6 +4,7 @@
   align-items: center;
   text-align: center;
   width: 100%;
+  flex-grow: 1;
 
   &.top {
     justify-content: flex-start;
